crates/ink/tests/ui/contract/fail/constructor-const.stderr
error: ink! constructors must not be const
 --> tests/ui/contract/fail/constructor-const.rs:8:13
  |
8 |         pub const fn constructor() -> Self {
  |             ^^^^^
